--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.campuscode06.contactapp">
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
     <application
         android:allowBackup="true"
@@ -22,9 +23,8 @@
             android:name=".provider.ContactsProvider"
             android:exported="false"
             android:label="Contacts"></provider>
-        
-        
-        
+
+
     </application>
 
 </manifest>
